:sparkles: Finish implementing

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -17,7 +17,11 @@
       <br>
       <hr>
       <img src="{{filepath}} " border="1">
-      The result is {{result}} . 
+      <br>
+      <p>There are {{result}} people in the photo.</p>
+      <p>There are {{mask}} people wearing a face mask.</p>
+      <p>There are {{nonmask}} people not wearing a face mask.</p>
+      <p>There are {{nondist}} people who doesn't wear a face mask and have enough distance.</p>
     {% endif %}
   </body>
 </html>
