--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -12,40 +12,15 @@
       <a class="item" href="https://github.com/hide27k/face-mask-detection/issues" target="_blank">Report a bug</a>
     </header>
     <div class="decoration"></div>
-    <h1 class="title"> Face Mask Detector</h1>
-    {% with messages = get_flashed_messages(with_categories=true) %}
-      {% if messages %}
-        {% for category, message in messages %}
-          <p class="{{ category }}" style="color: red;">{{ message }}</p>
-        {% endfor %}
-      {% endif %}
-    {% endwith %}
-    <p class="instruction"> Upload Image </p>
-    <form class="form" action = "./" method = "POST" enctype = "multipart/form-data">
-      <input type = "file" name = "file" />
-      <input type = "submit"/>
-    </form>
-    {% if filepath %}
-      <br>
-      <div class="img">
-        <p class="instruction"> Click Image to Download </p>
-        <a href="{{filepath}}" download="result">
-          <img src="{{filepath}}" border="1">
-        </a>
-      </div>
-      <br>
-    {% endif %}
-    {% if result %}
-      <h3 class="summary">Summary</h3>
-      <div class="description">
-        <ul>
-          <li>There are {{result}} people in the photo.</li>
-          <li>There are {{mask}} people wearing a face mask correctly.</li>
-          <li>There are {{nonmask}} people not wearing a face mask correctly.</li>
-          <li>There are {{nonmasknose}} people wearing a face mask below their nose.</li>
-          <li>There are {{nondist}} people who don't wear a face mask and they don't have enough social distance.</li>
-        </ul>
-      </div>
-    {% endif %}
+    <h1 class="title"> Face Mask Detector </h1>
+    <p class="instruction"> Choose a model to run in the backend</p>
+    <div class="models">
+      <button class="vgg">
+        <a href="{{ url_for('upload_file_vgg') }}" >VGG19</a>
+      </button>
+      <button class="vgg">
+        <a href="{{ url_for('upload_file_resnet') }}" >ResNet34</a>
+      </button>
+    </div>
   </body>
 </html>
