--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -3,17 +3,50 @@
   <head>
     <meta charset="utf-8">
     <title>Face Mask Detector</title>
+    <link rel="shortcut icon" href="favicon.png" type="image/png">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" >
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='static/style.css') }}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
+    <style>
+      body {
+        font-family: 'Nunito', sans-serif;
+        text-decoration: none;
+        text-align: center;
+        font-size: 20px;
+      }
+.title {
+  margin-top: 50px;
+  text-align: center;
+  
+}
+
+.item {
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+
+}
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+    </style>
   </head>
   <body>
+    
     <header>
-      <a class="item" href="https://hide27k.github.io/face-mask-detection" target="_blank">About</a>
-      <a class="item" href="https://github.com/hide27k/face-mask-detection/issues" target="_blank">Report a bug</a>
+      <br><br><br><br>
+      <img src="logo.png" width="25%" class="center"/>
+      <br><br>
+      <center>
+        <a class="item" href="https://hide27k.github.io/face-mask-detection" target="_blank"><b>About</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        <a class="item" href="https://github.com/hide27k/face-mask-detection/issues" target="_blank"><b>Report a bug</b></a>
+      </center>
     </header>
-    <div class="decoration"></div>
-    <h1 class="title"> Face Mask Detector </h1>
-    <p class="instruction"> Choose a model to run in the backend</p>
+    
+    <p class="instruction"><p><b>Choose a model to run in the backend</b></p>
     <div class="models">
       <button class="vgg">
         <a href="{{ url_for('upload_file_vgg') }}" >VGG19</a>
