--- a/app/templates/resnet.html
+++ b/app/templates/resnet.html
@@ -5,6 +5,8 @@
     <title>Face Mask Detector</title>
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" >
     <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
