--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -14,23 +14,67 @@
         text-decoration: none;
         text-align: center;
         font-size: 20px;
+        background-color: black;
+        color: white;
       }
 .title {
   margin-top: 50px;
   text-align: center;
-  
 }
 
 .item {
   text-decoration: none;
-  color: black;
   font-size: 20px;
-
 }
 .center {
     display: block;
     margin-left: auto;
     margin-right: auto;
+}
+
+.vgg {
+  background-color: transparent;
+  border: 3px solid #00d7c3;
+  border-radius: 50px;
+  -webkit-transition: all .15s ease-in-out;
+  transition: all .15s ease-in-out;
+  color: #00d7c3;
+}
+.vgg:hover {
+  box-shadow: 0 0 10px 0 #00d7c3 inset, 0 0 20px 2px #00d7c3;
+  border: 3px solid #00d7c3;
+}
+
+.resnet {
+  background-color: transparent;
+  border: 3px solid #fd00e5;
+  border-radius: 50px;
+  -webkit-transition: all .15s ease-in-out;
+  transition: all .15s ease-in-out;
+  color: #fd00e5;
+}
+.resnet:hover {
+  box-shadow: 0 0 10px 0 #00d7c3 inset, 0 0 20px 2px #fd00e5;
+  border: 3px solid #00d7c3;
+}
+.button {
+  width: 170px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  text-align: center;
+  color: #000;
+  text-transform: uppercase;
+  font-weight: 600;
+  margin-left: 30px;
+  margin-bottom: 30px;
+  cursor: pointer;
+  display: inline-block;
+}
+a {
+  text-decoration: none;
+  color: white;
+  font-size: 30px;
+  font-family: 'Nunito', sans-serif;
 }
     </style>
   </head>
@@ -45,13 +89,14 @@
         <a class="item" href="https://github.com/hide27k/face-mask-detection/issues" target="_blank"><b>Report a bug</b></a>
       </center>
     </header>
-    
+    <br><br>
     <p class="instruction"><p><b>Choose a model to run in the backend</b></p>
+    <br><br>
     <div class="models">
-      <button class="vgg">
+      <button class="button vgg">
         <a href="{{ url_for('upload_file_vgg') }}" >VGG19</a>
       </button>
-      <button class="vgg">
+      <button class="button resnet">
         <a href="{{ url_for('upload_file_resnet') }}" >ResNet34</a>
       </button>
     </div>
