--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,89 +4,21 @@
     <meta charset="utf-8">
     <title>Face Mask Detector</title>
     <link rel="shortcut icon" href="favicon.png" type="image/png">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" >
-    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='static/style.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', filename='img/favicon.ico') }}" >
+    <link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='style.css') }}">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nunito&display=swap" rel="stylesheet">
-    <style>
-      body {
-        font-family: 'Nunito', sans-serif;
-        text-decoration: none;
-        text-align: center;
-        font-size: 20px;
-        background-color: black;
-        color: white;
-      }
-.title {
-  margin-top: 50px;
-  text-align: center;
-}
-
-.item {
-  text-decoration: none;
-  font-size: 20px;
-}
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-}
-
-.vgg {
-  background-color: transparent;
-  border: 3px solid #00d7c3;
-  border-radius: 50px;
-  -webkit-transition: all .15s ease-in-out;
-  transition: all .15s ease-in-out;
-  color: #00d7c3;
-}
-.vgg:hover {
-  box-shadow: 0 0 10px 0 #00d7c3 inset, 0 0 20px 2px #00d7c3;
-  border: 3px solid #00d7c3;
-}
-
-.resnet {
-  background-color: transparent;
-  border: 3px solid #fd00e5;
-  border-radius: 50px;
-  -webkit-transition: all .15s ease-in-out;
-  transition: all .15s ease-in-out;
-  color: #fd00e5;
-}
-.resnet:hover {
-  box-shadow: 0 0 10px 0 #00d7c3 inset, 0 0 20px 2px #fd00e5;
-  border: 3px solid #00d7c3;
-}
-.button {
-  width: 170px;
-  padding-top: 30px;
-  padding-bottom: 30px;
-  text-align: center;
-  color: #000;
-  text-transform: uppercase;
-  font-weight: 600;
-  margin-left: 30px;
-  margin-bottom: 30px;
-  cursor: pointer;
-  display: inline-block;
-}
-a {
-  text-decoration: none;
-  color: white;
-  font-size: 30px;
-  font-family: 'Nunito', sans-serif;
-}
-    </style>
   </head>
   <body>
     
     <header>
       <br><br><br><br>
-      <img src="logo.png" width="25%" class="center"/>
+      <img src="{{ url_for('static', filename='img/logo.png') }}" width="25%" class="center"/>
       <br><br>
       <center>
-        <a class="item" href="https://hide27k.github.io/face-mask-detection" target="_blank"><b>About</b></a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
-        <a class="item" href="https://github.com/hide27k/face-mask-detection/issues" target="_blank"><b>Report a bug</b></a>
+        <a class="item" href="{{ url_for('main_page') }}" >Home</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        <a class="item" href="https://hide27k.github.io/face-mask-detection" target="_blank">About</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+        <a class="item" href="https://github.com/hide27k/face-mask-detection/issues" target="_blank">Report a bug</a>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
       </center>
     </header>
     <br><br>
