--- a/app/static/style.css
+++ b/app/static/style.css
@@ -1,75 +1,67 @@
-header {
-  padding: 20px 10px;
-  text-align: right;
-}
-
-a {
+body {
+  font-family: 'Nunito', sans-serif;
   text-decoration: none;
-  color: black;
+  text-align: center;
+  font-size: 20px;
+  background-color: black;
+  color: white;
+}
+.title {
+margin-top: 50px;
+text-align: center;
 }
 
 .item {
-  display: inline-block;
-  margin-right: 20px;
+text-decoration: none;
+font-size: 20px;
 }
-
-.decoration {
-  position: absolute;
-  top: 0;
-  right: 0;
-  left: 0;
-  height: 4px;
-  background-image: linear-gradient(90deg, purple, #fffd80);
-  z-index: 120;
-}
-
-.title {
-  margin-top: 50px;
-  text-align: center;
-}
-
-.instruction {
-  text-align: center;
-  color: darkslategrey;
-}
-
-.message {
-  text-align: center;
-}
-
-.form {
-  text-align: center;
-}
-
-.img {
-  text-align: center;
-}
-
-img {
-  width: 800px;
-}
-
-.summary {
-  text-align: center;
-}
-
-.description {
-  text-align: center;
-}
-
-ul { 
-	display: inline-block; 
-	text-align: left; 
+.center {
+display: block;
+margin-left: auto;
+margin-right: auto;
 }
 
 .vgg {
-  text-align: center;
+background-color: transparent;
+border: 3px solid #00d7c3;
+border-radius: 50px;
+-webkit-transition: all .15s ease-in-out;
+transition: all .15s ease-in-out;
+color: #00d7c3;
+}
+.vgg:hover {
+box-shadow: 0 0 10px 0 #00d7c3 inset, 0 0 20px 2px #00d7c3;
+border: 3px solid #00d7c3;
 }
 
 .resnet {
-  text-align: center;
+background-color: transparent;
+border: 3px solid #fd00e5;
+border-radius: 50px;
+-webkit-transition: all .15s ease-in-out;
+transition: all .15s ease-in-out;
+color: #fd00e5;
 }
-
-.models {
-  text-align: center;
+.resnet:hover {
+box-shadow: 0 0 10px 0 #ff4bee inset, 0 0 20px 2px #fd00e5;
+border: 3px solid #ff4bee;
+}
+.button {
+width: 170px;
+padding-top: 30px;
+padding-bottom: 30px;
+text-align: center;
+color: #000;
+text-transform: uppercase;
+font-weight: 600;
+margin-left: 30px;
+margin-bottom: 30px;
+cursor: pointer;
+display: inline-block;
+}
+a {
+text-decoration: none;
+color: white;
+font-size: 30px;
+font-family: 'Nunito', sans-serif;
 }
